--- a/content/b&w/2021-05-28-cow.md
+++ b/content/b&w/2021-05-28-cow.md
@@ -1,6 +1,6 @@
 ---
-title: Cow
+title: New World
 date: 2021-05-28T21:08:30.191Z
-alt: Cow by thekevshot
-photograph: /img/dsc02661.jpg
+alt: New World by thekevshot
+photograph: /img/169390539_163596828956063_6313981767038963290_n.jpg
 ---
