Update Gear “2023-10-23-23mm”

--- a/content/gear/2023-10-23-23mm.md
+++ b/content/gear/2023-10-23-23mm.md
@@ -1,4 +1,5 @@
 ---
 title: Fujifilm Lens XF23mmF2 R WR
-link: '//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=thekevshot-20&language=es_US&marketplace=amazon&region=US&placement=B01KNXOCO8&asins=B01KNXOCO8&linkId=a5cb83ae8bd5b6f2bbc691f0e7b22f94&show_border=false&link_opens_in_new_window=true'
+image: https://ir-na.amazon-adsystem.com/e/ir?t=thekevshot-20&language=es_US&l=li2&o=1&a=B01KNXOCO8
+link: https://amzn.to/3QrwFPy
 ---
