--- a/content/gear/2023-10-23-23mm.md
+++ b/content/gear/2023-10-23-23mm.md
@@ -1,5 +1,5 @@
 ---
 title: Fujifilm Lens XF23mmF2 R WR
-image: https://ir-na.amazon-adsystem.com/e/ir?t=thekevshot-20&language=es_US&l=li2&o=1&a=B01KNXOCO8
+image: https://m.media-amazon.com/images/I/51tSTa3oISL._SL160_.jpg
 link: https://amzn.to/3QrwFPy
 ---
