--- a/content/silhouettes/2023-08-18-ice-here.md
+++ b/content/silhouettes/2023-08-18-ice-here.md
@@ -1,4 +1,4 @@
 ---
 title: Ice here, Jardin, Antioquia - Colombia, 2023
-photograph: /img/ice-here.jpg
+photograph: /img/silhouettes/ice-here.jpg
 ---
